tests/fsharp/typecheck/sigs/neg101.bsl

neg101.fs(7,11,7,14): typecheck error FS0039: The field, constructor or member 'Foo' is not defined.